Replace hint subgrid/subsubgrid with a decoration concept